// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders correctly 1`] = `
<div
  className="number-select"
>
  <div
    className="number-select__wrapper"
  >
    <div
      className="number-select__value"
      onClick={[Function]}
    >
      0
    </div>
    <div
      className="number-select__options"
    >
      <div
        className="number-select__option number-select__option--selected"
        data-value={0}
        key="0"
        onClick={[Function]}
      >
        0
      </div>
      <div
        className="number-select__option"
        data-value={1}
        key="1"
        onClick={[Function]}
      >
        1
      </div>
      <div
        className="number-select__option"
        data-value={2}
        key="2"
        onClick={[Function]}
      >
        2
      </div>
      <div
        className="number-select__option"
        data-value={3}
        key="3"
        onClick={[Function]}
      >
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`render renders padded values correctly 1`] = `
<div
  className="number-select"
>
  <div
    className="number-select__wrapper"
  >
    <div
      className="number-select__value"
      onClick={[Function]}
    >
      00
    </div>
    <div
      className="number-select__options"
    >
      <div
        className="number-select__option number-select__option--selected"
        data-value={0}
        key="00"
        onClick={[Function]}
      >
        00
      </div>
      <div
        className="number-select__option"
        data-value={1}
        key="01"
        onClick={[Function]}
      >
        01
      </div>
      <div
        className="number-select__option"
        data-value={2}
        key="02"
        onClick={[Function]}
      >
        02
      </div>
      <div
        className="number-select__option"
        data-value={3}
        key="03"
        onClick={[Function]}
      >
        03
      </div>
    </div>
  </div>
</div>
`;
